new intro & start general proofread

--- a/main.tex
+++ b/main.tex
@@ -353,6 +353,7 @@ The originality of our approach relies in the exhaustive enumeration of all poss
 \input{parts/PH}
 
 \section{Answer Set Programming}
+\label{sec:asp}
 \input{parts/basic-asp}
 
 \section{Fixed point enumeration}
