--- a/parts/fixPoint.tex
+++ b/parts/fixPoint.tex
@@ -1,10 +1,7 @@
 \Maxime{Changer peut-être un peu cette entrée en matière pour varier par rapport à la version précédente.}
 
-The study of basins of attraction provides an important understanding of the different behaviors of a Biological Regulatory Network (BRN)~\cite{wuensche1998genomic}.
-Indeed, a system will always eventually end in a basin of attraction,
-and this may depend on biological switches or other complex phenomena.
-Here we focus on fixed points (also called stable states or steady states),
-which are basins of attraction composed of only one state.
+The first aspect of our present work is the enumeration of a special kind of basins of attraction: fixed points (also called stable states or steady states) which are composed of only one state.
+They can be studied separately from attractors because their enumeration follows a different pattern which is more specific to this problem.
 
 \subsection{Process Hitting translation in ASP}
 Before any analysis of the network,
