--- a/parts/results.tex
+++ b/parts/results.tex
@@ -65,9 +65,10 @@ We have constructed the input descriptions of these models, the automata network
  & & & & & & 0.050 & 6 & 0\\
  & & & & & & 0.319 & 20 & 0\\
 \hline
- \multirow{3}{*}{mTOR}  & \multirow{3}{*}{6} & \multirow{3}{*}{12} & \multirow{3}{*}{$2^6$} & \multirow{3}{*}{-} & \multirow{3}{*}{-} & - & - & -\\
- & & & & & & - & - & -\\
- & & & & & & - & - & -\\
+ \multirow{3}{*}{mTOR}  & \multirow{3}{*}{6} & \multirow{3}{*}{12} & \multirow{3}{*}{$2^6$} & \multirow{3}{*}{0.009} & \multirow{3}{*}{1} & 0.019 & 2 & 0\\
+ & & & & & & 0.101 & 8 & 0\\
+ & & & & & & 0.397s & 16 & 0\\
+
 \hline
  \multirow{3}{*}{egf-tnf}  & \multirow{3}{*}{28} & \multirow{3}{*}{56} & \multirow{3}{*}{$2^{28}$} & \multirow{3}{*}{0.005} & \multirow{3}{*}{2} & 0 & 2 & 0\\
  & & & & & & 9.192 & 8 & 1\\
